# subreddit-archiver

./: README.md  cli.py  config.py  db.py  get_posts.py  main.py  progressbars.py  schema.sql  serializer.py  setup.cfg  states.py  tests.py  validators.py
subreddit_archiver/: cli.py  db.py  get_posts.py  main.py  progressbars.py  schema.sql  serializer.py  states.py  utils.py
subreddit_archiver/tests/: conftest.py  test_get_post.py  test_states.py
tests/: conftest.py  test_get_post.py  test_states.py
tests/test_data/: test_post.pickle  test_post_output.py
