[metadata]
name = subreddit_archiver
version = 0.0.2
author = Arshad Riyaz
author_email = arshadr@protonmail.com
description = Archive and keep up-to-date subreddits from reddit.com
url = https://github.com/arshadrr/subreddit-archiver
project_urls =
    Bug Tracker = https://github.com/arshadrr/subreddit-archiver/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Topic :: Utilities

[options]
packages = subreddit_archiver
python_requires = >=3.7
install_requires = praw
include_package_data = True

[options.package_data]
subreddit_archiver = schema.sql
* = LICENSE

[options.entry_points]
console_scripts = 
    subreddit-archiver = subreddit_archiver.main:main
